--- a/src/fonts/style.css
+++ b/src/fonts/style.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'RobotoThin';
     src: local('Roboto Thin'), local('Roboto-Thin'), url('Robotothin.woff2') format('woff2'), url('Robotothin.woff') format('woff'), url('Robotothin.ttf') format('truetype');
     font-weight: 100;
     font-style: normal;
