-- Добавила создание персонажа ( осталось доделать 5%)

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,10 +1,14 @@
 body {
 	margin: 0 auto;
 	color: #fff;
-	user-select: none;
+  user-select: none;
 }
 li{
   list-style: none;
+}
+input[type=range] {
+  -webkit-appearance: none;
+  outline: none;
 }
 input[type="radio"]{
 	display: none;
