--- a/src/fonts/style.css
+++ b/src/fonts/style.css
@@ -11,7 +11,7 @@
     font-style: italic;
 }
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'RobotoLight';
     src: local('Roboto Light'), local('Roboto-Light'), url('Robotolight.woff2') format('woff2'), url('Robotolight.woff') format('woff'), url('Robotolight.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
@@ -23,7 +23,7 @@
     font-style: italic;
 }
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'RobotoRegular';
     src: local('Roboto'), local('Roboto-Regular'), url('Roboto.woff2') format('woff2'), url('Roboto.woff') format('woff'), url('Roboto.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
