--- a/src/components/editorplayer/css/editorplayer.css
+++ b/src/components/editorplayer/css/editorplayer.css
@@ -6,8 +6,8 @@
 /* <!-- Слайдер камеры --> */
 .сamera-editor-main {
     width: 230px;
-    height: 183px;
-    background:rgb(0, 0, 0);
+    height: 185px;
+    background:rgb(28, 28, 28);
     display: flex;
     flex-direction: column;
     margin-left: 11px;
@@ -29,6 +29,7 @@
 }
 .range-editor-block .range-text {
     margin-bottom: 10px;
+    font-size: 13px;
 }
 
 .range-editor-block .range-slider-editor{
@@ -51,7 +52,7 @@
     z-index: 9;
 }
 .range-slider-editor .range-label{
-    display: flex;
+    display: none;
     justify-content: center;
     margin-top: 10px;
 }
@@ -147,10 +148,10 @@
     color: rgb(72, 185, 242);      
 }
 .box-change .box-editor-title {
-    margin-bottom: 12px;
+    margin-bottom: 10px;
     font-family: "RobotoLight";
     color: rgb(255, 255, 255);
-    font-size: 10px;    
+    font-size: 13px;
 }
 
 .box-in-change {
@@ -179,7 +180,7 @@
 }
 .box-in-change .arrow-change {
     background: url(../img/arrow-left-change.png) no-repeat;
-    width: 10px;
+    width: 20px;
     height: 20px;
     cursor: pointer;
 }
@@ -331,7 +332,8 @@ input.range-slider-ch:checked + label .slider-change-radio {
     color: rgb(255, 255, 255);
 }
 .range-editor-block-big .range-text {
-    margin-bottom: 14px;
+    margin-bottom: 10px;
+    font-size: 13px;
 }
 .range-editor-block-big .range-slider-editor-big{
     width: 363px;
@@ -358,7 +360,7 @@ input.range-slider-ch:checked + label .slider-change-radio {
     position: relative;
 }
 .range-slider-editor-big .range-label{
-    display: flex;
+    display: none;
     justify-content: center;
     margin-top: 10px;
 }
@@ -366,7 +368,8 @@ input.range-slider-ch:checked + label .slider-change-radio {
     margin-top: 24px;
 }
 .range-editor-block-big .range-text {
-    margin-bottom: 14px;
+    margin-bottom: 10px;
+    font-size: 13px;
 }
 .range-editor-block-big:first-child {
     margin-top: 24px;
@@ -384,14 +387,14 @@ input.range-slider-ch:checked + label .slider-change-radio {
  /*range-slider-left-menu*/ 
  .range-slider-editor .input-range__slider, .range-slider-editor-big .input-range__slider {
     appearance: none;
-    width: 13px;
-    height: 3px;
+     width: 18px;
+     height: 8px;
     transform: rotate(90deg);
     background: rgb(72, 185, 242);  
     cursor: pointer;
     display: block;   
-    margin-left: -0.5rem;
-    margin-top: -2.5px;
+    margin-left: -0.6rem;
+    margin-top: -5px;
     outline: none;
     position: absolute;
     top: 50%;
@@ -447,7 +450,7 @@ input.range-slider-ch:checked + label .slider-change-radio {
     left: 50%; 
 }  
 .range-slider-editor .input-range__track, .range-slider-editor-big .input-range__track {
-    height: 2px;
+    height: 4px;
     background: rgb(60, 60, 60);
     cursor: pointer;
     display: block;
@@ -480,7 +483,7 @@ input.range-slider-ch:checked + label .slider-change-radio {
 }
 .menu-editor-default .create-info-input input.auth-input-style {
     width: 360px;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #a9a9a9;
     font-family: "Roboto";
     font-size: 14px;
     color: rgb(62, 181, 241);
