- Апгрейд оружия - готово

--- a/src/components/inventory/css/img-items.css
+++ b/src/components/inventory/css/img-items.css
@@ -432,6 +432,204 @@
 .img-277 { background: url(../img/all-items/Item_277.png) no-repeat; }
 .img-278 { background: url(../img/all-items/Item_278.png) no-repeat; }
 
+.img-279 { background: url(../img/all-items/Item_27.png) no-repeat; }
+.img-280 { background: url(../img/all-items/Item_27.png) no-repeat; }
+.img-281 { background: url(../img/all-items/Item_28.png) no-repeat; }
+.img-282 { background: url(../img/all-items/Item_29.png) no-repeat; }
+.img-283 { background: url(../img/all-items/Item_30.png) no-repeat; }
+.img-284 { background: url(../img/all-items/Item_30.png) no-repeat; }
+.img-285 { background: url(../img/all-items/Item_146.png) no-repeat; }
+.img-286 { background: url(../img/all-items/Item_27.png) no-repeat; }
+.img-287 { background: url(../img/all-items/Item_27.png) no-repeat; }
+
+.img-288 { background: url(../img/all-items/Item_147.png) no-repeat; }
+.img-289 { background: url(../img/all-items/Item_148.png) no-repeat; }
+.img-290 { background: url(../img/all-items/Item_151.png) no-repeat; }
+.img-291 { background: url(../img/all-items/Item_149.png) no-repeat; }
+.img-292 { background: url(../img/all-items/Item_152.png) no-repeat; }
+
+.img-293 { background: url("../img/weapon/flashlight.png") no-repeat; }
+
+.img-293 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-294 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-295 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-296 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-297 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-298 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-299 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-300 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-301 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-302 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-303 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-304 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-305 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-306 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-307 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-308 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-309 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-310 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-311 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-312 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-313 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-314 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-315 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-316 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-317 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-318 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-319 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-320 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-321 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-322 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-323 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-324 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-325 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-326 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-327 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-328 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-329 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-330 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-331 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-332 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-333 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-334 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-335 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-336 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-337 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-338 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-339 { background: url("../img/weapon/grip.png") no-repeat; }
+.img-340 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-341 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-342 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-343 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-344 { background: url("../img/weapon/grip.png") no-repeat; }
+.img-345 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-346 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-347 { background: url("../img/weapon/grip.png") no-repeat; }
+.img-348 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-349 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-350 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-351 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-352 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-353 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-354 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-355 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-356 { background: url("../img/weapon/grip.png") no-repeat; }
+.img-357 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-358 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-359 { background: url("../img/weapon/grip.png") no-repeat; }
+.img-360 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-361 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-362 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-363 { background: url("../img/weapon/grip.png") no-repeat; }
+.img-364 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-365 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-366 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-367 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-368 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-369 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-370 { background: url("../img/weapon/grip.png") no-repeat; }
+.img-371 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-372 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-373 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-374 { background: url("../img/weapon/grip.png") no-repeat; }
+.img-375 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-376 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-377 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-378 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-379 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-381 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-382 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-383 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-384 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-385 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-386 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-387 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-388 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-389 { background: url("../img/weapon/grip.png") no-repeat; }
+.img-390 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-391 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-392 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-393 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-394 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-395 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-396 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-397 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-398 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-399 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-401 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-402 { background: url("../img/weapon/grip.png") no-repeat; }
+.img-403 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-404 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-405 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-406 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-407 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-408 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-409 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-410 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-411 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-412 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-413 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-414 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-415 { background: url("../img/weapon/grip.png") no-repeat; }
+.img-416 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-417 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-418 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-419 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-420 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-421 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-422 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-423 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-424 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-425 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-426 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-427 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-428 { background: url("../img/weapon/grip.png") no-repeat; }
+.img-429 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-430 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-431 { background: url("../img/weapon/grip.png") no-repeat; }
+.img-432 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-433 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-434 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-435 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-436 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-437 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-438 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-439 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-440 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-441 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-442 { background: url("../img/weapon/grip.png") no-repeat; }
+.img-443 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-444 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-445 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-446 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-447 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-448 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-449 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-450 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-451 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-452 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-453 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-454 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-455 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-456 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-457 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-458 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-459 { background: url("../img/weapon/grip.png") no-repeat; }
+.img-460 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-461 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-462 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-463 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-464 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-465 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-466 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-467 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-468 { background: url("../img/weapon/grip.png") no-repeat; }
+.img-469 { background: url("../img/weapon/supressor.png") no-repeat; }
+.img-470 { background: url("../img/weapon/scope.png") no-repeat; }
+.img-471 { background: url("../img/weapon/flashlight.png") no-repeat; }
+.img-472 { background: url("../img/weapon/grip.png") no-repeat; }
+.img-473 { background: url("../img/weapon/scope.png") no-repeat; }
+
 .icon-item {
     width: 41px;
     height: 41px;
