--- a/src/fonts/style.css
+++ b/src/fonts/style.css
@@ -59,7 +59,7 @@
     font-style: italic;
 }
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'RobotoBlack';
     src: local('Roboto Black'), local('Roboto-Black'), url('Robotoblack.woff2') format('woff2'), url('Robotoblack.woff') format('woff'), url('Robotoblack.ttf') format('truetype');
     font-weight: 900;
     font-style: normal;
